--- a/styles.css
+++ b/styles.css
@@ -252,38 +252,38 @@ aside {
     z-index: 2;
     padding: 12px;
     border-radius: 50%;
-  }
-  .product-detail-close:hover {
+}
+.product-detail-close:hover {
     cursor: pointer;
-  }
-  #productDetail > img:nth-child(2) {
+}
+#productDetail > img:nth-child(2) {
     width: 100%;
     height: 360px;
     object-fit: cover;
     border-radius: 0 0 20px 20px;
-  }
-  #productDetail .product-info {
-    margin: 24px 24px 0 24px;
-  }
-  #productDetail .product-info p:nth-child(1) {
+}
+#productDetail .product-info {
+    margin: 24px 24px 0 24px;   
+}
+#productDetail .product-info p:nth-child(1) {
     font-weight: bold;
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 4px;
-  }
-  #productDetail .product-info p:nth-child(2) {
+}
+#productDetail .product-info p:nth-child(2) {
     color: var(--very-light-pink);
     font-size: var(--md);
     margin-top: 0;
     margin-bottom: 36px;
-  }
-  #productDetail .product-info p:nth-child(3) {
+}
+#productDetail .product-info p:nth-child(3) {
     color: var(--very-light-pink);
     font-size: var(--sm);
     margin-top: 0;
     margin-bottom: 36px;
-  }
-  .primary-button {
+}
+.primary-button {
     background-color: var(--hospital-green);
     border-radius: 8px;
     border: none;
@@ -293,12 +293,12 @@ aside {
     font-size: var(--md);
     font-weight: bold;
     height: 50px;
-  }
-  .add-to-cart-button {
+}
+.add-to-cart-button {
     display: flex;
     align-items: center;
     justify-content: center;
-  }
+}
 
 /* Product List  */
 .cards-container {
@@ -310,6 +310,7 @@ aside {
   }
 .product-card {
     width: 240px;
+    cursor: pointer;
   }
 .product-card img {
     width: 240px;
